--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+body {
+  font-family: "Noto Color Emoji", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .grid {
   width: 400px;
   height: 400px;
